# Strand---I-believe-I-can-fly---Studien2-

./: .gitmodules  I-believe-I-can-fly-Demo.sh  Links  Multi-Person-Tracking-with-OpenPose-Demo.sh  README.md  Setup  hard_clean.sh  hard_clear.sh
catkin/: .gitignore  i-believe-i-can-fly-showcase.launch  i-believe-i-can-fly.launch
catkin/devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
catkin/devel/include/person_detection/: Skeleton.h
catkin/devel/lib/pkgconfig/: person_detection.pc
catkin/src/airsim_connector/: CMakeLists.txt  airsim_connector.launch  package.xml
catkin/src/airsim_connector/src/: airsim_instruction_builder.py  communication_manager.py  drone_controller.py  node.py
catkin/src/i_believe_i_can_fly_airsim_connector/: CMakeLists.txt  package.xml
catkin/src/i_believe_i_can_fly_airsim_connector/src/: drone_controller.py  node.py
catkin/src/i_believe_i_can_fly_common/: CMakeLists.txt
catkin/src/i_believe_i_can_fly_person_detection/: CMakeLists.txt  package.xml
catkin/src/i_believe_i_can_fly_pose_detection/: CMakeLists.txt  package.xml
catkin/src/person_detection/: CMakeLists.txt  package.xml  person_detection.launch
catkin/src/person_detection/msg/: Keypoint.msg
catkin/src/pose_detection/: CMakeLists.txt  package.xml  pose_detection.launch
catkin/src/pose_detection/msg/: Command.msg
catkin/src/pose_detection/src/: calibrator.py  fuzzy_controller_2D.py  node.py  point.py  pose.py  pose_detector.py  skeleton.py
python/: fuzzy_controller.py  opencv.py  openpose_webcam_tracking.py  pose_detection.py  skeleton_detection.py
(+19 files in other folders)
